--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h1>Click</h1>
         </div>
         <div class="intro"> 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam fuga labore facilis reiciendis. Facilis quod blanditiis natus perspiciatis. Pariatur nostrum cum corporis voluptas perferendis. Atque eaque sequi amet dolor cupiditate.</p>
+            <p>Photographers of all skill levels do not have access to a centralized database for locating ideal and inspirational photography locations due to a lack of overall accessible documentation and knowledge-sharing by a larger community of photographers. Click is a knowledge-sharing app for photographers of all levels. Through Click, photographers will be able to find photography locations for their next shoot as well as suggest and review locations themselves. They will be able to share their photos and other users will be able to like/endorse the photo, moving the highest quality photos to the top. These photos will serve as a representation of the location for other users to review.  Lastly, they will also be able to find information pertinent for the perfect shot: seasonal information, lens suggestions, type of camera, etc.</p>
         </div>
         <div class="role">
             <h2>My Role: UX Researcher</h2>
@@ -78,7 +78,7 @@
             <h2>Timeline: Three weeks</h2>
         </div>
         <div class="main">
-            <img src="images/main.png">
+            <img src="images/main2.jpg">
         </div>
    
       </section>
@@ -87,7 +87,13 @@
       <div> 
         <div class="titleTwo">
             <h1>Research</h1>
-            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt fuga in, et ullam ipsa amet quos molestiae! Eos praesentium in autem pariatur omnis? Minus aliquam qui ut veniam recusandae deserunt.</p>
+            <p> In the age of information, photography has never been more accessible to people of all skill levels than it is today. Social media has brought a renewed attention and interest to photography as users are exposed to hundreds of photos as they scroll through their feeds. Additionally, youtube, blogs and other web pages have made learning photography easier than ever. Currently, there is not an application that serves as a community for photographers to share and find the locations of the photos as well as detailed information about these shots. The goal of our interview research plan is to determine how users are currently finding locations for photography, gauge interest in community based sharing of knowledge, and what tools are photographers utilizing in the industry; mobile or otherwise? Interviews will be held with participants via video conferencing apps or in person; the method will be determined for the participant’s convenience. Each interview will be 20-30 mins and all interviews will be conducted over the course of one week. Inclusion Criteria:
+              Must be interested in photography and have experience taking basic pictures
+              Must have a smartphone and have basic knowledge of how to use applications
+              Must be at least 18-years-old
+              Exclusion Criteria:
+              No experience with photography/not interested in photography
+              </p>
 
         </div>
     </div>
