--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           </div>
           <div class="grid-item grid-item-6">
               <h2>User Persona</h2>
-              <img src="images/userpersona.png">
+              <img src="images/userpersona.PNG">
           </div>
           
 
